style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

/* -------------------- CSS RESET ----------------------- */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}
body {
    line-height: 1;
}
ol,
ul {
    list-style: none;
}
blockquote,
q {
    quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
    content: "";
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* -------------------- CSS RESET ----------------------- */

html,
body {
    font-family: "Orbitron", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100vh;
    box-sizing: border-box;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 64px;
}

header h1 {
    letter-spacing: 3px;
    font-size: 64px;
    font-weight: 600;
    margin: 0;
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgb(155, 155, 155);
    width: 300px;
    padding: 24px;
    border: 2px black solid;
    border-radius: 15px;
}

.screen {
    text-align: right;
    border: 2px black solid;
    border-radius: 5px;
    background-color: #ffffff;
}

.last-result {
    min-height: 32px;
    font-size: 20px;
    padding: 0px 12px;
    margin-top: 24px;
}

.current-result {
    min-height: 64px;
    font-size: 40px;
    padding: 0px 12px;
}

.buttons-container {
    margin-top: 24px;
    display: flex;
    justify-content: center;
    gap: 14px;
}

.col {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.row {
    display: flex;
    justify-content: space-between;
    gap: 12px;
}

.btn {
    width: 65px;
    text-align: center;
    background-color: #e4e4e4;
    padding: 12px;
    border: 2px solid #000000;
    border-radius: 5px;
    font-family: inherit;
    font-weight: 500;
    font-size: 20px;
}

.btn:hover {
    cursor: pointer;
    background-color: #f7f7f7;
}

.btn:active {
    background-color: #f0f0f0;
}

.plus-sign {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.dot {
    font-weight: 800;
}

footer {
    height: 69px;
    display: flex;
    justify-content: center;
}

footer .footer-container {
    width: 960px;
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

footer .footer-container p {
    font-size: 18px;
    font-weight: 600;
}

.short-text {
    display: none;
}

.socials i {
    margin-left: 18px;
    transition: all 500ms;
}

.socials i:hover {
    transform: scale(1.5);
}

.social-icon {
    color: #000000;
}

@media only screen and (max-width: 564px) {
    header {
        margin-top: 90px;
    }
    header h1 {
        font-size: 40px;
    }

    .full-text {
        display: none;
    }

    .short-text {
        display: block;
    }
}

@media only screen and (max-height: 800px) {
    header {
        margin: 32px 0px;
    }

    footer {
        margin: 32px 0px;
    }
}

